                        ReadDirectoryChangesW.
    * MountFS: added support for mounting at the root directory, and for
      mounting over an existing mount.
    * Added 'getpathurl' and 'haspathurl' methods.
    * Added utils.isdir(fs,path,info) and utils.isfile(fs,path,info); these
      can often determine whether a path is a file or directory by inspecting
      the info dict and avoid an additional query to the filesystem.
    * Added utility module 'fs.filelike' with some helpers for building and
      manipulating file-like objects.
    * Added getmeta and hasmeta methods
    * Separated behaviour of setcontents and createfile
    * Added a getmmap to base
    * Added command line scripts fsls, fstree, fscat, fscp, fsmv
    * Added command line scripts fsmkdir, fsmount
    * Made SFTP automatically pick up keys if no other authentication
      is available
    * Optimized listdir and listdirinfo in SFTPFS
    * Made memoryfs work with threads
    * Added copyfile_non_atomic and movefile_non_atomic for improved performance of multi-threaded copies
    * Added a concept of a writeable FS to MultiFS
    * Added ilistdir() and ilistdirinfo() methods, which are generator-based
      variants of listdir() and listdirinfo().
    * Removed obsolete module fs.objectree; use fs.path.PathMap instead.
    * Added setcontents_async method to base
    * Added `appdirfs` module to abstract per-user application directories

0.5:

    * Ported to Python 3.X
    * Added a DeleteRootError to exceptions thrown when trying to delete '/'
    * Added a remove_all function to utils
    * Added sqlitefs to fs.contrib, contributed by Nitin Bhide
    * Added archivefs to fs.contrib, contributed by btimby
    * Added some polish to fstree command and unicode box lines rather than ascii art

0.5.1:

    * Fixed a hang bug in readline
    * Added copydir_progress to fs.utils

0.5.2:

    * Added utils.open_atomic_write

0.5.3:


