@@ -100,5 +100,7 @@
 
 0.5.3:
 
+    * Implemented scandir in listdir if available
+
 
 
